fix(text-block): align left right now works on both components

--- a/components/image-combo/image-combo.less
+++ b/components/image-combo/image-combo.less
@@ -45,7 +45,7 @@
 	}
 }
 
-blockquote.text-block-left {
+.text-block-left {
 	margin-right: @spacing-default*1.5;
 	margin-left: 0;
 
@@ -55,7 +55,7 @@ blockquote.text-block-left {
 	}
 }
 
-blockquote.text-block-right {
+.text-block-right {
 	margin-left: @spacing-default*1.5;
 	margin-right: 0;
 
